--- a/site/app/templates/error/NoAccessCourse.twig
+++ b/site/app/templates/error/NoAccessCourse.twig
@@ -2,5 +2,5 @@
     You don't have access to this course. <br />
     This is <b>{{course_name}}</b> for <b>{{semester}}</b>. <br/>
     If you think this is a mistake, please contact your instructor to gain access. <br/>
-    click <a href = "{{main_url}}"> here </a> to back to homepage and see your courses list.
+    Click <a href = "{{main_url}}"> here </a> to back to homepage and see your courses list.
 </div>
